kubernetes/bankapp-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bankapp-ingress
  namespace: bankapp-namespace
  annotations:
        nginx.ingress.kubernetes.io/rewrite-target: /
    
spec:
  ingressClassName: nginx
  rules:
  - host: "megaproject.letsdeployit.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bankapp-service
            port:
              number: 8080
      - path: /nginx
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
